--- a/themes/bbkweb/theme.toml
+++ b/themes/bbkweb/theme.toml
@@ -1,20 +1,16 @@
-# theme.toml template for a Hugo theme
-# See https://github.com/gohugoio/hugoThemes#themetoml for an example
-
-name = "Bbkweb"
-license = "MIT"
-licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE.md"
-description = ""
-homepage = "http://example.com/"
+name = "bbkweb"
+license = ""
+licenselink = ""
+description = "Theme for bbkweb.org subsites"
+homepage = ""
 tags = []
 features = []
 min_version = "0.29"
 
 [author]
-  name = ""
-  homepage = ""
+  name = "Ian Sealy"
+  homepage = "http://www.iansealy.com/"
 
-# If porting an existing theme
 [original]
   name = ""
   homepage = ""
