--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,60 @@
-baseURL: http://example.org/
-languageCode: en-us
-title: My New Hugo Site
+title: Web Development and User Experience
+baseURL: http://wdux1718.bbkweb.org/
+languagecode: en-gb
+defaultlayout: page
+disablekinds: [taxonomy, taxonomyTerm, RSS, sitemap, robotsTXT]
+disablehugogeneratorinject: true
+metadataformat: yaml
+pluralizelisttitles: false
+sectionpagesmenu: main
+theme: bbkweb
+blackfriday:
+  hrefTargetBlank: true
+params:
+  longyear: "2017/2018"
+  shortyear: "1718"
+  url: "wdux1718.bbkweb.org"
+  session01name: WDUX01
+  session01date: "2017-10-14"
+  session01time: "9:30-16:30"
+  session01tutors: "Ian Sealy & Kieren Pitts"
+  session02name: WDUX02
+  session02date: "2017-10-17"
+  session02time: "18:00-21:00"
+  session02tutors: "Peter Otto & Martina Schell"
+  session03name: WDUX03
+  session03date: "2017-10-28"
+  session03time: "9:30-16:30"
+  session03tutors: "Ian Sealy & Kieren Pitts"
+  session04name: WDUX04
+  session04date: "2017-10-31"
+  session04time: "18:00-21:00"
+  session04tutors: "Peter Otto & Martina Schell"
+  session05name: WDUX05
+  session05date: "2017-11-07"
+  session05time: "18:00-21:00"
+  session05tutors: "Peter Otto & Martina Schell"
+  session06name: WDUX06
+  session06date: "2017-11-11"
+  session06time: "9:30-16:30"
+  session06tutors: "Ian Sealy & Kieren Pitts"
+  session07name: WDUX07
+  session07date: "2017-11-21"
+  session07time: "18:00-21:00"
+  session07tutors: "Peter Otto & Martina Schell"
+  session08name: WDUX08
+  session08date: "2017-11-28"
+  session08time: "18:00-21:00"
+  session08tutors: "Peter Otto & Martina Schell"
+  session09name: WDUX09
+  session09date: "2017-12-02"
+  session09time: "9:30-16:30"
+  session09tutors: "Ian Sealy & Kieren Pitts"
+  session10name: WDUX10
+  session10date: "2017-12-05"
+  session10time: "18:00-21:00"
+  session10tutors: "Peter Otto & Martina Schell"
+  session11name: WDUX11
+  session11date: "2017-12-12"
+  session11time: "18:00-21:00"
+  session11tutors: "Peter Otto & Martina Schell"
