Change tutor for last session.

--- a/config.yaml
+++ b/config.yaml
@@ -57,4 +57,4 @@ params:
   session11name: WDUX11
   session11date: "2017-12-12"
   session11time: "18:00-21:00"
-  session11tutors: "Peter Otto & Martina Schell"
+  session11tutors: "Tim Priestman"
