Add assignment deadline to config.

--- a/config.yaml
+++ b/config.yaml
@@ -58,3 +58,4 @@ params:
   session11date: "2017-12-12"
   session11time: "18:00-21:00"
   session11tutors: "Tim Priestman"
+  assignmentdate: "2018-01-09"
